2010-06-25  Alpha Lam  <hclam@chromium.org>

        Unreviewed. Build fix.

        Build fix for r61908. Updating test expectations.

        * platform/chromium-linux/css1/basic/containment-expected.checksum:
        * platform/chromium-linux/css1/basic/containment-expected.png:
        * platform/chromium-linux/css1/box_properties/padding_right-expected.checksum:
        * platform/chromium-linux/css1/box_properties/padding_right-expected.png:
        * platform/chromium-linux/css1/font_properties/font_size-expected.checksum:
        * platform/chromium-linux/css1/font_properties/font_size-expected.png:
        * platform/chromium-linux/editing/selection/5354455-1-expected.checksum:
        * platform/chromium-linux/editing/selection/5354455-1-expected.png:
        * platform/chromium-linux/editing/selection/5354455-2-expected.checksum:
        * platform/chromium-linux/editing/selection/5354455-2-expected.png:
        * platform/chromium-linux/editing/selection/move-by-line-001-expected.checksum:
        * platform/chromium-linux/editing/selection/move-by-line-001-expected.png:
        * platform/chromium-linux/fast/backgrounds/001-expected.checksum:
        * platform/chromium-linux/fast/backgrounds/001-expected.png:
        * platform/chromium-linux/fast/block/float/nested-clearance-expected.checksum:
        * platform/chromium-linux/fast/block/float/nested-clearance-expected.png:
        * platform/chromium-linux/fast/block/positioning/051-expected.checksum:
        * platform/chromium-linux/fast/block/positioning/051-expected.png:
        * platform/chromium-linux/fast/block/positioning/055-expected.checksum:
        * platform/chromium-linux/fast/block/positioning/055-expected.png:
        * platform/chromium-linux/fast/css/last-of-type-pseudo-class-expected.checksum:
        * platform/chromium-linux/fast/css/last-of-type-pseudo-class-expected.png:
        * platform/chromium-linux/fast/events/5056619-expected.checksum: