@@ -1,3 +1,15 @@
+2010-06-25  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Dimitri Glazkov.
+
+        activeTexture wrongly generates error with legal input.
+        https://bugs.webkit.org/show_bug.cgi?id=41227
+
+        Test: fast/canvas/webgl/texture-active-bind.html
+
+        * html/canvas/WebGLRenderingContext.cpp:
+        (WebCore::WebGLRenderingContext::activeTexture): Fix the upper limit test for test units.
+
 2010-06-25  Johnny Ding  <jnd@chromium.org>
 
         Reviewed by Adam Barth.
